src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationStringAssignBool.deca
//Description :
//	affectation d'un boolean à une variable définie comme string
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : type incompatible <10, 6>

{
	String x;
	x = true;
	println(x);
}